--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "description": "WP Boilerplate which implements Bedrock",
   "authors": [
     {
-      "name": "Leo Studer",
+      "name": "Leo Studer"
     }
   ],
   "config": {
