--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "johnpbloch/wordpress": "4.9.0",
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "le0daniel/wp_system":"^1.0.0"
+    "le0daniel/wp_system":"1.0.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2"
