--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DB_USER=database_user
 DB_PASSWORD=database_password
 
 # Optional variables
-# DB_HOST=127.0.0.1
+# DB_HOST=database_host
 # DB_PREFIX=wp_
 
 WP_ENV=development
