--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,12 @@
     "php": ">=7.0",
     "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "4.9.0",
+    "johnpbloch/wordpress": "4.9.1",
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "le0daniel/wp_system":"1.0.*",
-    "wpackagist-plugin/advanced-custom-fields":"5.6.*"
+    "wpackagist-plugin/advanced-custom-fields":"5.6.*",
+    "wpackagist-plugin/codepress-admin-columns": "^3.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2"
