Added Expose Duration Header Cleared debug.twig

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ WP_HOME=http://example.com
 WP_SITEURL=${WP_HOME}/wp
 
 HOT_RELOAD=false
+EXPOSE_DURATION=false
 
 # Generate your keys here: https://roots.io/salts.html
 AUTH_KEY='generateme'
