--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@
 DB_NAME=database_name
 DB_USER=database_user
 DB_PASSWORD=database_password
+DB_HOST=database_host
 
 # Optional variables
-# DB_HOST=database_host
 # DB_PREFIX=wp_
 
 WP_ENV=development
@@ -15,6 +15,7 @@ HOT_RELOAD=false
 EXPOSE_DURATION=false
 
 # Generate your keys here: https://roots.io/salts.html
+# $ wp dotenv salts generate --force
 AUTH_KEY='generateme'
 SECURE_AUTH_KEY='generateme'
 LOGGED_IN_KEY='generateme'
