Added possibility to disable security headers

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ WP_SITEURL=${WP_HOME}/wp
 HOT_RELOAD=false
 EXPOSE_DURATION=false
 
+
+DISABLE_SECURITY_HEADERS=false
+
 # Generate your keys here: https://roots.io/salts.html
 # $ wp dotenv salts generate --force
 AUTH_KEY='generateme'
