--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,6 @@
     {
       "type": "composer",
       "url": "https://wpackagist.org"
-    },
-    {
-      "url": "git@github.com:le0daniel/wp_system.git",
-      "type": "git"
     }
   ],
   "require": {
@@ -37,11 +33,11 @@
   },
   "extra": {
     "installer-paths": {
-      "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
-      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
-      "web/app/themes/{$name}/": ["type:wordpress-theme"]
+      "public_html/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
+      "public_html/app/plugins/{$name}/": ["type:wordpress-plugin"],
+      "public_html/app/themes/{$name}/": ["type:wordpress-theme"]
     },
-    "wordpress-install-dir": "web/wp"
+    "wordpress-install-dir": "public_html/wp"
   },
   "scripts": {
     "test": [
